Updates throughout for flow and grammar

--- a/paper/sections/challenges.tex
+++ b/paper/sections/challenges.tex
@@ -73,22 +73,21 @@
 Our analysis of the literature revealed several challenges that need to be considered when developing systems using Blockchain technology.
 In this section, we describe these challenges and limitations.
 In Appendix~\ref{sec:research}, we survey academic research that is attempting to address some of the challenges.
-Note, this section is focused challenges facing Blockchain systems generally, not challenges facing specific applications (e.g., Bitcoin, Etherium).
+Note that this section is focused on challenges facing Blockchain systems generally, not challenges facing specific applications such as Bitcoin or Ethereum).
 
 \subsection{Blockchain scalability and performance}
+%As usage of Blockchain applications such as Bitcoin has grown, questions have been raised about their scalability, cost, and performance.
+Many documents in our corpus point out that blockchain is \emph{not a high performance system} and that its decentralized governance and operation result in an inefficient use of resources. As Blockchain systems grow to serve more users, these challenges manifest in several ways. 
 
+First, most of today's permissionless blockchains are based on proof-of-work protocols in which consensus is achieved by having miners solve computationally difficult puzzles. The energy expended by the specialized hardware devices dedicated to solving these computational puzzles grows as the system scales; an estimate in April 2018 found that the energy consumed by Bitcoin miners alone was equivalent to the power usage of almost 5.5 million US households~\cite{Digiconomist}. This wastefulness is a significant drawback of proof-of-work consensus.
 
+Another unintended consequence of proof-of-work is the centralization of mining power.  In order to reduce variance in their earnings, miners are incentivized to work together in large mining pools, pooling their computing power and sharing the profits among pool members. This phenomenon has emerged in all large-scale proof-of-work Blockchain systems\footnote{Currently almost 70\% of Bitcoin blocks are mined by the five largest mining pools~\cite{BlockchainInfoPools}}, and it is a problem because it inhibits decentralization~\cite{arxiv:GBERS18}. Of course, these pools are disincentivized to damage trust in the system (and thus reduce its value and their profits) by abusing their power to censor transactions or violate rules in other ways. But this centralization undoubtedly runs counter to the normative property that Blockchain is decentralized and it may violate security notions that depend on decentralization.  
 
-
-
-
-As usage of Blockchain applications such as Bitcoin has grown, questions have been raised about their scalability, cost, and performance. Many documents in our corpus point out that blockchain is \emph{not a high performance system} and that its decentralized governance and operation result in an inefficient use of resources.  In particular, most of today's permissionless blockchains are based on proof-of-work style consensus in which consensus is achieved by having miners solve computationally difficult puzzles. This has led to the proliferation of power-hungry specialized hardware devices dedicated to solving these computational puzzles. An estimate in April 2018 found that the energy consumed by Bitcoin miners was equivalent to the power usage of almost 5.5 million US households~\cite{Digiconomist}, and all signs indicate that it will continue to grow.
-
-Another unintended consequence of proof-of-work blockchains is the centralization of mining power.  In order to reduce variance in their earnings, miners are incentivized to work together in large mining pools, pooling their computing power and sharing the profits among pool members.  Currently almost 70\% of Bitcoin blocks are mined by the five largest mining pools~\cite{BlockchainInfoPools}, inhibiting decentralization~\cite{arxiv:GBERS18}. Of course, these pools are disincentivized to damage trust in Bitcoin (and thus reduce its value and their profits) by abusing their power to censor transactions or violate rules in other ways. But this centralization undoubtedly runs counter to the normative property that Blockchain is decentralized and it may violate security notions that depend on decentralization.  
-
-Additionally, many design choices limit the performance of Blockchain systems.  Small block sizes can lead to extremely high transaction fees when miners are unwilling to add transactions that result in having to create more blocks.  On the other hand, larger block sizes can impede  throughput due to the increased latency of finalizing a transaction. In Bitcoin, one must wait for six additional blocks to be confirmed before a transaction is considered final, which may be prohibitively long for applications where transactions need to clear immediately. The challenge of handling a huge number of transactions while achieving acceptable levels of throughput and latency remains a critical hurdle to the use of Blockchain solutions in performance-critical systems.
+Additionally, many design choices limit the performance of Blockchain systems.  Small block sizes can lead to extremely high transaction fees when miners are unwilling to add transactions that result in having to create more blocks.  On the other hand, larger block sizes can impede  throughput due to the increased latency of finalizing a transaction. %In Bitcoin, one must wait for six additional blocks to be confirmed before a transaction is considered final, which may be prohibitively long for applications where transactions need to clear immediately.
+The challenge of handling a huge number of transactions while achieving acceptable levels of throughput and latency remains a critical hurdle to the use of Blockchain solutions in performance-critical systems.
 
 \subsection{Blockchain correctness and dealing with errors}
+\label{subsec:correctness}
 A payment or asset transfer system must be able to reverse fraudulent or errant transactions. The immutability property of Blockchain means that transactions cannot be stricken from the ledger after consensus has been reached, so alternative means of dispute resolution must be explored. A new transaction reversing the effects of the disputed transaction could be added to the ledger, but decentralized governance makes arbitrating such a dispute difficult as there is no individual arbiter with the authority to determine which party is in the right when a dispute occurs.  Additionally, dispute resolution must be handled carefully to avoid introducing new vulnerabilities.  For example, several attacks were demonstrated against the Bitcoin refund mechanism~\cite{FC:MccShaHao16} necessitating further research to design secure refunds~\cite{arxiv:AviSafSha18}.
 
 Correctness is also a challenge in smart contracts. The impact of a bug in a contract can be devastating what that contract controls the transference of valuable assets, and the immutability of Blockchain exacerbates this challenge by impeding rollback of state changes. This is because by definition, any transactions on a blockchain upon which consensus is reached are considered legal - including those due to buggy code and exploitations of such. If ``code is law'', as claimed by a blockchain-based investment fund called the Decentralized Autonomous Organization (DAO), then so are bugs.  Moreover, the lack of tools for checking correctness of smart contracts before they are deployed significantly increases the likelihood of such bugs.  The risk of such bugs was made plainly clear in June 2016, when a bug in the DAO smart contract allowed an attacker to steal about \$80m.
@@ -108,9 +107,9 @@ Another major challenge is how to protect the privacy of the users and data stor
 
 Moreover, if one wishes to hide the parties participating in a transaction recorded on a blockchain, it is not enough to hide the transaction information.  It is also necessary to protect the anonymity of these parties by hiding the fact that they connected to the blockchain in the first place.  While most blockchains provide a notion of ``pseudonymity'' in which users are identified by their cryptographic keys instead of by their names or social security numbers, it has been shown that this is not enough to provide true anonymity as attacks that correlate transactions by the same pseudonyms together with access histories can deanonymize blockchain transactions\anote{Add citations}.
 
-\subsection{User Experience}
-
-The requirement for blockchain users to store, manage, and secure cryptographic keys is a major challenge. Key management is needed to certify users' own transactions, as well as to verify the transactions of others.  The challenges of maintaining and protecting key repositories are well documented in other areas of cryptography (see, e.g.~\cite{uss:WhiTyg99} for secure email). A survey by Eskandari et al.~\cite{arxiv:ECBS18} outlines the challenges as well as potential solutions for managing keys for Bitcoin. They discuss solutions such as password-protected and password-derived keys as well as offline and air-gapped storage of the keys.  But as the authors state, all of these solutions have their drawbacks.
+\subsection{Usability} %User Experience}
+Users and developers of blockchain systems both face usability challenges. For users, one of the biggest hurdles to widespread use is the requirement that they store, manage, and secure cryptographic keys. %Key management is needed to certify users' own transactions, as well as to verify the transactions of others. 
+The challenges of maintaining and protecting key repositories are well documented in other areas of cryptography (see, e.g.~\cite{uss:WhiTyg99} for secure email). A survey by Eskandari et al.~\cite{arxiv:ECBS18} outlines the challenges as well as potential solutions for managing keys for Bitcoin. They discuss solutions such as password-protected and password-derived keys as well as offline and air-gapped storage of the keys.  But as the authors state, all of these solutions have their drawbacks.
 
 With a key management solution in place, a further challenge is obtaining transactions for auditing purposes---auditing is a much touted capability of blockchain across our dataset. In a decentralized environment, running a full node on the network, or relying on a entity that does (such as a blockchain explorer website or a lightweight user-client) is necessary. 
 
@@ -122,10 +121,7 @@ For developers, development and analysis tools are critical to building secure a
 %As mentioned earlier, the lack of smart contract development and testing tools increases the chance of critical bugs.  Additionally, there is a lack of testing support and infrastructure to test out one's applications (for correctness, performance, and security) before deploying them. 
 
 \subsection{Key management challenges}
-
-\subsection{Necessity of blockchain}
-Finally, before a company chooses to deploy Blockchain it should carefully consider whether it is the right tool for the job.  Due to the hype around this technology many solutions have turned to Blockchain when other, more established technologies such as traditional databases would do the job. For example, in situations when a centralized repository is easily available, it is likely to be preferable to a blockchain.  In fact there are relatively few use cases where blockchain is demonstratively the ``right'' solution.  While we believe that more such use cases will be identified, when evaluating a new use case it is important to make sure that Blockchain is really needed and that a lower-overhead solution will not suffice.
-
+\bnote{Looks like this got rolled into UX challenges, so we should delete this subsection?}
 
 \subsection{Legality and Regulation}
 
@@ -142,3 +138,5 @@ An extreme case of regulation is prohibition of cryptocurrencies or blockchain-a
 % Jeremy: This is too speculative in my opinion and there is enough to talk about otherwise:
 %Another regulatory issue that has recently come to light is whether blockchain technology is compatible with European Union's General Data Protection Regulation (GDPR) that has recently been put into law in the EU.  GDPR requires that individuals have the ``right to be forgotten'', i.e., that they should be able to expunge outdated or invalid information about themselves from available records.  However, since any data stored on a blockchain is immutable, this seems to pose a challenge for GDPR compliance.  Much research within the technical and regulatory communities is needed to ensure that blockchain can comply with existing regulation and to prevent the many nefarious uses of this technology.
 
+\subsection{Necessity of blockchain}
+Finally, before a company chooses to deploy Blockchain it should carefully consider whether it is the right tool for the job.  Due to the hype around this technology many solutions have turned to Blockchain when other, more established technologies such as traditional databases would do the job. For example, in situations when a centralized repository is easily available, it is likely to be preferable to a blockchain.  In fact there are relatively few use cases where blockchain is demonstratively the ``right'' solution.  While we believe that more such use cases will be identified, when evaluating a new use case it is important to make sure that Blockchain is really needed and that a lower-overhead solution will not suffice.
