--- a/paper/sections/methodology.tex
+++ b/paper/sections/methodology.tex
@@ -3,39 +3,38 @@
 \section{Methodology}
 \label{sec:method}
 
-In this work, we sought to offer a high-level overview of Blockchain technology and its many possible uses.  To accomplish this, we considered the standard academic approach of surveying the available literature. During this process, it became clear that the majority of work exploring Blockchain's capabilities and use cases comes from non-academic sources. These sources were largely from the tech and financial industries.\footnote{Here, we consider industry broadly: corporations, small and medium business, startups, and consortia.}
+In this work, we sought to offer a high-level overview of Blockchain technology and its many possible uses.  To accomplish this, we considered the standard academic approach of surveying the available literature. During this process, it became clear that the majority of work exploring Blockchain's capabilities and use cases comes from non-academic sources. These sources were largely from the technology and financial industries.\footnote{Here, we consider industry broadly: corporations, small and medium business, startups, and consortia.}
 
 Materials produced by industry are sufficiently different from academic literature to make them difficult to use as sources in a traditional literature review.
 In particular, there are three main concerns when reviewing materials that originated from industry:
 
 \begin{enumerate}
 	\item \emph{Lack of precise terminology and discussion.}
-	In our review of materials from industry, we found that the same concepts were often described using divergent and imprecise terminology, leading to difficult to understand white papers and sometimes muddled descriptions of capabilities and use cases.
+	In our review of materials from industry, we found that the same concepts were often described using divergent and imprecise terminology, leading to white papers that are difficult to understand and provide muddled descriptions of capabilities and use cases.
 	Additionally, while there is a fair bit of factually inaccurate information in materials from industry (e.g., several documents claimed cryptographic signatures provide confidentiality), in several cases we  observed an accurate description of an idea that was phrased in such a way as to make it seem incorrect under cursory examination. Some of those ideas were assembled in ways that are interesting to academics, if one takes the time to work through the material.
 	In this regard, materials from industry represent a trove of useful information obscured by imprecise terminology and discussion.
 	
 	\item \emph{Inclusion of hype.}
-	Much of the material from industry includes visionary statements (i.e., hype) regarding how Blockchain technology will change business practices, power dynamics and the way the world works.
+	Much of the material from industry includes visionary statements (i.e., hype) about how Blockchain technology will change business practices, power dynamics and the way the world works.
 	This hype is a mixture of realistic use cases that can benefit from Blockchain technology (e.g., anonymous payments~\cite{chaum1988untraceable}) and ideals that far transcend any technical solution (e.g., removing the need for governments).
 	Unfortunately, unlike what one would expect in academic literature, the materials from industry often intermingle hype with technical details. This at least partially explains why some in academia are quick to dismiss sources from industry.
 	
 	\item \emph{Researcher bias.}	
 	Researcher bias is an obvious problem in any literature review---regardless of whether the source is academia or industry---and one that is often not explicitly addressed in systemization papers.
-	The potential for bias is even stronger when reviewing materials from industry as academia's inherent caution when considering work from industry.
-	Along with the two issues described above (i.e., lack of precise terminology, hype) it is easy for researchers to dismiss out of hand ideas proposed by industry.
+	The potential for bias is even stronger when reviewing materials from industry because the two issues described above (lack of precise terminology and hype) make it easy for researchers to dismiss out of hand ideas proposed by industry.
 %	Additionally, being aware of the academic pedigree of Blockchain technology can make it easy to overlook the interesting use cases enabled by the composition of existing primitives.
 	
 \end{enumerate}
 
-For all three reasons, it is tempting to exclude industry materials from a review of the literature on Blockchain technology as previous work has often done.
+For these three reasons, it is tempting to exclude industry materials from a review of the literature on Blockchain technology as previous work has often done.
 However, taking this approach sacrifices any possible insights that can be gained from the substantial effort that has been poured into Blockchain technology by industry.
 Instead we chose to look for a research methodology that would allow us to address these issues and still extract the underlying information discussed by industry.
-Ultimately, we settled on using a well established research method: \emph{grounded theory}~\cite{glaser1965constant,strauss1990basics,corbin1990grounded} (also known as the constant comparative method).
+Ultimately, we settled on using a well-established research method: \emph{grounded theory}~\cite{glaser1965constant,strauss1990basics,corbin1990grounded} (also known as the constant comparative method).
 
 Grounded theory is used to analyze qualitative data sources (e.g., user stories, interviews) and extract the underlying data and processes described across the myriad of gathered sources.\footnote{Grounded theory identifies data and processes that are supported across the body of sources and is not a method for creating a fine-grained breakdown of an individual document.}
 In particular, grounded theory is designed to help researchers identify data and processes within qualitative data sources generated by humans and filled with imprecise terminology and descriptions.
-Additionally, grounded theory limits the impact of researcher bias, ensuring that the data and processes are derived from the data and not from the researcher's preconceived notions of what the data says.
-Grounded theory explicitly addresses the first and third problems we identified for evaluating materials from industry, and our hope was that it would also be able to separate the hype from the underlying data and processing; a hope which we believe was satisfied based on our results.
+Additionally, grounded theory limits the impact of researcher bias, ensuring that the data and processes are derived from the data and not from the researchers' preconceived notions of what the data says.
+Grounded theory explicitly addresses the first and third problems we identified for evaluating materials from industry, and our hope was that it would also be able to separate the hype from the underlying data and processing. We believe these goals were satisfied based on our results. 
 
 The idea of using grounded theory for literature review is not new~\cite{wolfswinkel2013using,yang2012descriptive} and this method has been used in thousands of studies examining qualitative data.\footnote{As evidence of its wide use, the top-cited paper describing grounded theory has 62,951 citations as of writing.}
 %TODO: This needs to be deanonymized when published.
@@ -46,7 +45,7 @@ Next, we describe the grounded theory process in some detail, as it may be unfam
 Lastly, we describe an academic literature review we conducted to enhance the results of our grounded theory analysis.
 
 \subsection{Industry Material Gathering}
-Beginning in the summer of 2016 we began to gather documents published in regards to Blockchain technology.
+Beginning in the summer of 2016 we began to gather documents published regarding Blockchain technology.
 This included both materials from industry and academia, though this section will focus on only the former.
 We gathered materials using a variety of methods:
 
@@ -58,14 +57,13 @@ We gathered materials using a variety of methods:
 	\item Reviewing submissions to the ONC Blockchain in Health Care Competition.\footnote{\url{https://www.healthit.gov/topic/grants-contracts/announcing-blockchain-challenge}}.
 \end{itemize}
 
-When reviewing these materials, we would also follow references and include those documents if we believe they were relevant.
-In total, we collected 132 document.
-The documents we gathered generally fell into one of three categories.
+When reviewing these materials, we would also follow references and include those documents if we believed they were relevant.
+In total, we collected 132 documents across three categories.
 
 \begin{itemize}
 	\item \emph{High-Level Overviews.} These were often prepared by investment firms and gave high level overviews of Blockchain technology. They would also reference various efforts at using Blockchain in practice.
 	\item \emph{System White Papers.} These papers would describe how Blockchain technology was used in a specific system, or more frequently a system proposal.
-	\item \emph{Blockchain Commentaries.} These were largely shorter documents that would discuss a specific facet of Blockchain technology in greater depth than we saw in other documents.
+	\item \emph{Blockchain Commentaries.} These were generally shorter documents that would discuss a specific facet of Blockchain technology in greater depth than we saw in other documents.
 \end{itemize}
 
 \subsection{Grounded Theory Data Analysis}
@@ -144,8 +142,8 @@ This provides credence to the notion that Blockchain technology overall is a coh
 
 This is the first stage of our methodology where research expertise directly influenced the results.
 First, by its very nature drawing connections between concepts is subjective.
-In most cases, these connections were directly motivated by explicit references in the text, but in several cases we drew connections that we felt were implicit within the text.
-Second, we identified several misconceptions that either shared no connections with the rest of the concepts or were obviously false (e.g., cryptographic signatures do not provide confidentiality).
+In most cases these connections were directly motivated by explicit references in the text, but in several cases we drew connections that we felt were implicit within the text.
+Second, we identified several misconceptions that either shared no connections with the rest of the concepts or were obviously false (e.g., the assertion that cryptographic signatures provide confidentiality).
 In both of these situations, our research notes kept track of what was explicitly supported by the analyzed data and what was the result of researcher interpretation.
 
 \subsubsection{Stage 4---Theory Generation}
